--- a/Invoice_form_golden_pure/report/tax_invoice.xml
+++ b/Invoice_form_golden_pure/report/tax_invoice.xml
@@ -189,9 +189,7 @@
                        <div class="col-1">
 
                        </div>
-                       <div class="col-6" style="text-align: left; background-color: lightblue;">
-                                 <span t-field="o.amount_total_words"/>
-                       </div>
+
                        <div class="col-2" style="text-align: right;">
                                <strong style="text-align: right;">Total  </strong>
                        </div>
@@ -206,7 +204,7 @@
                        <div class="col-3" style="text-align: left; background-color: lightblue;">
                                <strong style="text-align: left;">Total amount in words: </strong>
                        </div>
-                       <div class="col-6" style="text-align: left; background-color: lightblue;">
+                       <div class="col-6" style="text-align: left;">
                                  <span t-field="o.amount_total_words"/>
                        </div>
                    </div>
