--- a/Invoice_form_golden_pure/report/tax_invoice.xml
+++ b/Invoice_form_golden_pure/report/tax_invoice.xml
@@ -201,7 +201,7 @@
                    <div class="row">
 
 
-                       <div class="col-3" style="text-align: left; background-color: lightblue;">
+                       <div class="col-3" style="text-align: left;">
                                <strong style="text-align: left;">Total amount in words: </strong>
                        </div>
                        <div class="col-6" style="text-align: left;">
