--- a/Invoice_form_golden_pure/report/layout.xml
+++ b/Invoice_form_golden_pure/report/layout.xml
@@ -9,26 +9,31 @@
 
                                    </div>
                                <div class="col-3">
-<img src="/Invoice_form_golden_pure/static/src/img/GOLDEN PURE FOODSTUFF TRADING CO.png" alt="Logo" style="max-width: 150px; max-height: 200px;"/>                                </div>
+                                <img src="/Invoice_form_golden_pure/static/src/img/GOLDEN PURE FOODSTUFF TRADING CO.png" alt="Logo" style="max-width: 150px; max-height: 200px;"/>
+                               </div>
                             <!-- العمود الأول للصورة الأولى -->
 
                                    <div class="col-7" style="padding-top: 20px;">
 
-                                <h6 style="text-align: center; vertical-align: baseline; max-height: 100px;"> <strong>GOLDEN PURE FOODSTUFF TRADING CO.L.L.C </strong>  </h6>
-                                       <h6 style="text-align: center; vertical-align: baseline; max-height: 100px;"><strong>UNITED ARAB EMIRATES-DUBAI-BUR DUBAI-AL FAHIDI-MUNICIPALITY BUILDING-OFFICE 43-44</strong>  </h6>
-                                        <h6 style="text-align: center; vertical-align: baseline; max-height: 100px;"><strong>TRN : 104208389700003</strong>   </h6>
+                                <h6 style="text-align: right; vertical-align: baseline; max-height: 50px;"> <strong>GOLDEN PURE FOODSTUFF TRADING CO.L.L.C </strong>  </h6>
+                                       <h6 style="text-align: right; vertical-align: baseline; max-height: 50px;"><strong>UNITED ARAB EMIRATES - DUBAI - BUR DUBAI</strong>  </h6>
+                                       <h6 style="text-align: right; vertical-align: baseline; max-height: 50px;"><strong>AL FAHIDI-MUNICIPALITY BUILDING-OFFICE 43</strong>  </h6>
+                                       <div class="row">
+                                    <div class="col-3">
+                                   </div>
+                                    <div class="col-7">
+
+                                        <h6 style="text-align: right; vertical-align: baseline; "><strong>TRN : 104208389700003</strong>   </h6>
                             </div>
 
+                               </div>
 
-
-
+                            </div>
 
                         </div>
 
                     </div>
          </div>
-
-
 
         <!-- محتوى القالب الأصلي هنا -->
         <div t-attf-class="article o_report_layout_standard o_company_#{company.id}_layout {{  'o_report_layout_background' if company.layout_background in ['Geometric', 'Custom']  else  '' }}" t-attf-style="background-image: url({{ 'data:image/png;base64,%s' % company.layout_background_image.decode('utf-8') if company.layout_background_image and company.layout_background == 'Custom' else '/base/static/img/bg_background_template.jpg' if company.layout_background == 'Geometric' else ''}});" t-att-data-oe-model="o and o._name" t-att-data-oe-id="o and o.id">
@@ -43,7 +48,6 @@
                 <div class="col-12">
                      <h8>For Info: info@goldenpure.ae | For Sales: sales1@goldenpure.ae | Tel: +971 48850038 | Mob: +971 505090058</h8>
                 </div>
-
 
                      </div>
                 <t t-if="report_type == 'pdf'" class="text-muted">
