--- a/Invoice_form_golden_pure/report/layout.xml
+++ b/Invoice_form_golden_pure/report/layout.xml
@@ -46,7 +46,7 @@
 
                      <div class="row">
                 <div class="col-12">
-                     <h8>For Info: info@goldenpure.ae | For Sales: sales1@goldenpure.ae | Tel: +971 48850038 | Mob: +971 505090058</h8>
+                     <h8> info@goldenpure.ae | Tel: +971 48850038 | Mob: +971 505090058</h8>
                 </div>
 
                      </div>
