--- a/Invoice_form_golden_pure/report/tax_invoice.xml
+++ b/Invoice_form_golden_pure/report/tax_invoice.xml
@@ -11,8 +11,11 @@
 
 
                <div class="page">
-                   <h2 style="text-align:center; color: #000000;" width="10%"> فاتورة ضريبية</h2>
-                   <h2 style="text-align:center; color: #000000; height: 30px;" width="10%"> Tax Invoice</h2>
+                    <hr style="border: 1px solid #000000;"/>
+                      <h2 style="text-align:center; color: #000000; height: 50px; " width="10%"></h2>
+
+                   <h4 style="text-align:center; color: #000000; height: 50px; font-family: Arial;" width="10%"> فـاتورة ضـريبية</h4>
+                   <h4 style="text-align:center; color: #000000; height: 30px; font-family: Arial, Helvetica, sans-serif;" width="10%"> TAX INVOICE</h4>
 
                    <div class="row" style="height: 30px;">
 
@@ -94,7 +97,7 @@
                            </tr>
                        </thead>
 
-                       <tbody>
+                       <tbody style="border: 2px solid black;" >
 
                            <tr t-set="sr_no" t-value="0"/>
                                 <tr t-foreach="o.invoice_line_ids" t-as="line">
@@ -109,13 +112,13 @@
                                <td style="text-align:center; font-size: 12px;">
                                    <span t-esc="int(line.quantity)"/>
                                </td>
-                               <td style="text-align:right; font-size: 12px;">
+                               <td style="text-align:center; font-size: 12px;">
                                    <span t-esc="line.price_unit"/>
                                </td>
-                               <td style="text-align:right; font-size: 12px;">
+                               <td style="text-align:center; font-size: 12px;">
                                    <span t-esc="line.l10n_ae_vat_amount"/>
                                </td>
-                               <td style="text-align:right; font-size: 12px;">
+                               <td style="text-align:center; font-size: 12px;">
                                    <span t-esc="line.price_total"/>
                                </td>
 
@@ -183,7 +186,7 @@
                        </div>
 
                        <div class="col-2" style="text-align: right;">
-                               <strong style="text-align: right;">Total  </strong>
+                            <strong style="text-align: right; font-weight: bolder; font-size: 20px;">     TOTAL     </strong>
                        </div>
                        <div class="col-2" style="text-align: right;">
                                  <span t-field="o.amount_total"/>
