--- a/Invoice_form_golden_pure/report/tax_invoice.xml
+++ b/Invoice_form_golden_pure/report/tax_invoice.xml
@@ -84,8 +84,8 @@
 
                    </div>
 
-                   <table class="table table-bordered" width="100%" style="border-collapse: collapse;">
-                       <thead>
+                   <table class="table table-bordered" width="100%" style="border-collapse: collapse; border: 2px solid black;">
+                       <thead style="border: 2px solid black; background-color: #bbd3c5;">
                            <tr>
                                <th style="text-align:center; font-size: 14px; border: 1px solid;">Seq.</th>
                                <th style="text-align:center; font-size: 14px; border: 1px solid;">Item</th>
@@ -97,7 +97,7 @@
                            </tr>
                        </thead>
 
-                       <tbody style="border: 2px solid black;" >
+                       <tbody style="border: 1px solid black;" >
 
                            <tr t-set="sr_no" t-value="0"/>
                                 <tr t-foreach="o.invoice_line_ids" t-as="line">
