--- a/Invoice_form_golden_pure/report/tax_invoice.xml
+++ b/Invoice_form_golden_pure/report/tax_invoice.xml
@@ -74,14 +74,22 @@
 
                    <div class="row" style="height: 30px;">
 
-                       <div class="col-2 ">
+                      <div class="col-1">
+
+                       </div>
+
+                       <div class="col-1">
+
+                       </div>
+
+
+                      <div class="col-2"  style="text-align: right;">
                                <strong>Mobile :</strong>
                        </div>
-                       <div class="col-3 " >
+                       <div class="col-2" style="text-align: right;">
 
                                <span t-field="o.partner_id.phone"/>
                        </div>
-
                    </div>
 
                    <table class="table table-bordered" width="100%" style="border-collapse: collapse; border: 2px solid black;">
