--- a/Invoice_form_golden_pure/report/layout.xml
+++ b/Invoice_form_golden_pure/report/layout.xml
@@ -18,11 +18,22 @@
                                 <h6 style="text-align: right; vertical-align: baseline; max-height: 50px;"> <strong>GOLDEN PURE FOODSTUFF TRADING CO.L.L.C </strong>  </h6>
 
                                        <div class="row">
-                                    <div class="col-3">
+                                    <div class="col-2">
                                    </div>
-                                    <div class="col-9" >
+                                    <div class="col-10" >
 
-                                         <h6 style="text-align: RIGHT; vertical-align: baseline; max-height: 50px;"><strong>DUBAI - AL FAHIDI - DM BUILDING-OFFICE 43 </strong>  </h6>
+                                         <h6 style="text-align: RIGHT; vertical-align: baseline; max-height: 50px;"><strong>OFFICE 403-53 NATIONAL GENERAL INSURANCE  </strong>  </h6>
+
+                            </div>
+
+                               </div>
+
+                                       <div class="row">
+                                    <div class="col-4">
+                                   </div>
+                                    <div class="col-7" style="padding-top: 7px;">
+
+                                        <h6 style="text-align: left; vertical-align: baseline; max-height: 50px; "><strong>BUILDING, PORT SAEED, DUBAI, UAE</strong>   </h6>
                             </div>
 
                                </div>
@@ -31,7 +42,7 @@
                                        <div class="row">
                                     <div class="col-3">
                                    </div>
-                                    <div class="col-7" style="padding-top: 10px;">
+                                    <div class="col-7" style="padding-top: 7px;">
 
                                         <h6 style="text-align: right; vertical-align: baseline; max-height: 50px; "><strong>TRN : 104208389700003</strong>   </h6>
                             </div>
